<resources>
    <string name="app_name">Puppy</string>
    <string name="identify_the_breed">Identify the Breed</string>
    <string name="identify_the_dog">Identify the Dog</string>
    <string name="search_dog_breed">Search Dog Breed</string>
    <string name="title_activity_identify_breed">IdentifyBreed</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dog_image">Dog Image</string>
    <string name="submit">Submit</string>
    <string name="advanced_level">Advanced Level</string>

    <string name="correct">CORRECT!</string>
    <string name="wrong">WRONG!</string>
    <string name="stop">Stop</string>
    <string name="enter_dog_breed_to_search">Enter dog breed to search</string>
</resources>
