<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".IdentifyBreed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_dog_breed"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_dog_breed_to_search"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/slideshowImage"
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:contentDescription="@string/dog_image"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/submitBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/submit" />

    <Button
        android:id="@+id/stopBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stop"
        android:text="@string/stop" />

    </LinearLayout>

</ScrollView>