<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="identifyBreed"
        android:text="@string/identify_the_breed" />

    <Button
        android:id="@+id/dog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="identifyDog"
        android:text="@string/identify_the_dog" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchBreed"
        android:text="@string/search_dog_breed" />

    <Switch
        android:id="@+id/advancedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:switchPadding="20sp"
        android:text="@string/advanced_level" />
</LinearLayout>