<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".IdentifyDog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identify_the_dog"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/identifyDogImage1"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:contentDescription="@string/dog_image"
            android:onClick="imageClick"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageButton
            android:id="@+id/identifyDogImage2"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:contentDescription="@string/dog_image"
            android:onClick="imageClick"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageButton
            android:id="@+id/identifyDogImage3"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:contentDescription="@string/dog_image"
            android:onClick="imageClick"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/dogName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:text="@string/next" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/countdown2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="#FF0000"
            android:textSize="25sp" />

    </LinearLayout>

</ScrollView>